@@ -1301,6 +1301,14 @@
 					>
 				</File>
 				<File
+					RelativePath=".\SetMisc.cpp"
+					>
+				</File>
+				<File
+					RelativePath=".\SetMisc.h"
+					>
+				</File>
+				<File
 					RelativePath=".\SetOverlayIcons.cpp"
 					>
 				</File>
