@@ -37,6 +37,8 @@
 - NEW: Added $WCNOW$ keyword to SubWCRev to insert system date/time. (Simon)
 - NEW: Possibility to set the location of the configuration directory.
        See issue #196. (Stefan)
+- NEW: Option to disable crawling unversioned folders in the status
+       control (used e.g. in the commit dialog). (Stefan)
 - CHG: The date filter in the log dialog now prevents the user from selecting
        dates outside the shown log messages. (Michael Dietschi)
 - CHG: Warn if user selects files inside an added folder to create a patch.
